src/styles/components/_form-group.scss
.form-group {
  width: 100%;

  &__label {
    color: $border-color;
    font-size: 16px;
    line-height: 22px;

    &--hidden {
      position: absolute;

      width: 1px;
      height: 1px;
      overflow: hidden;
    }
  }

  &__input {
    position: relative;
  }

  &__input-field {
    width: 100%;
    padding: 13px;

    font-size: 20px;
    line-height: 24px;

    background-color: $white;
    border: 1px solid $border-color;
    border-radius: 10px;

    transition: all 0.5s;

    &:focus {
      background-color: $blue-30;
      border-color: $blue;
    }

    &[disabled] {
      background-color: $grey;
      cursor: not-allowed;
    }

    &--group {
      border-right: none;
      border-radius: 10px 0 0 10px;
    }

    &--icon {
      padding-right: 54px;
    }
  }

  &__icon {
    position: absolute;
    top: 50%;
    right: 0;
    bottom: 50%;

    transform: translate(-50%, -50%);
    cursor: pointer;
  }
}

